fix: no gap between form and button-container

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
 .form-wrapper {
   height: 100%;
   display: flex;
+  gap: 1.5rem;
   flex-direction: column;
   justify-content: space-between;
 }
